--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -12,23 +12,22 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
-<content>
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="gui.MainViewController">
     <VBox prefWidth="513.0" prefHeight="326.0">
-        <children>
-            <MenuBar>
-                <menus>
-                    <Menu mnemonicParsing="false" text="Registration">
-                        <MenuItem mnemonicParsing="false" text="Seller" fx:id="menuItemSeller" onAction="#onMenuItemSellerAction"/>
-                        <MenuItem mnemonicParsing="false" text="Departments" fx:id="menuItemDepartment" onAction="#onMenuItemDepartmentAction"/>
-                    </Menu>
-                    <Menu mnemonicParsing="false" text="Help">
-                        <MenuItem mnemonicParsing="false" text="About" fx:id="menuItemAbout" onAction="#onMenuItemAboutAction"/>
-                    </Menu>
-                </menus>
-            </MenuBar>
-        </children>
+        <MenuBar>
+            <Menu mnemonicParsing="false" text="Registration">
+                <MenuItem mnemonicParsing="false" text="Seller" fx:id="menuItemSeller"
+                          onAction="#onMenuItemSellerAction"/>
+                <MenuItem mnemonicParsing="false" text="Departments" fx:id="menuItemDepartment"
+                          onAction="#onMenuItemDepartmentAction"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+                <MenuItem mnemonicParsing="false" text="About" fx:id="menuItemAbout"
+                          onAction="#onMenuItemAboutAction"/>
+            </Menu>
+        </MenuBar>
     </VBox>
-</content>
 </ScrollPane>
