--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.text.Font?>
-<?import javafx.geometry.Insets?>
-<VBox prefHeight="204.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" >
-    <Label text="About" style="Bold" >
+<VBox prefHeight="204.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" >
+    <Label text="About">
         <font>
-            <Font name="System Bold" size="18.0"/>
+            <Font name="System Bold" size="18.0" />
         </font>
         <padding>
-            <Insets bottom="10.0" left="20.0" top="10.0"/>
+            <Insets bottom="10.0" left="20.0" top="10.0" />
         </padding>
     </Label>
     <Label text="Javafx Application">
         <padding>
-            <Insets left="20.0"/>
+            <Insets left="20.0" />
         </padding>
     </Label>
 </VBox>
