--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -5,18 +5,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="204.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" >
+<VBox prefHeight="204.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
     <Label text="About">
         <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="18.0"/>
         </font>
         <padding>
-            <Insets bottom="10.0" left="20.0" top="10.0" />
+            <Insets bottom="10.0" left="20.0" top="10.0"/>
         </padding>
     </Label>
-    <Label text="Javafx Application">
+    <Label text="JavaFX application demo">
         <padding>
-            <Insets left="20.0" />
+            <Insets left="20.0"/>
         </padding>
     </Label>
 </VBox>
