--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -16,7 +16,8 @@
             prefWidth="600.0"
             xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="gui.MainViewController">
-    <VBox prefWidth="513.0" prefHeight="326.0">
+
+    <VBox fx:id="mainVbox" prefWidth="513.0" prefHeight="326.0">
         <MenuBar>
             <Menu mnemonicParsing="false" text="Registration">
                 <MenuItem mnemonicParsing="false" text="Seller" fx:id="menuItemSeller"
@@ -29,5 +30,6 @@
                           onAction="#onMenuItemAboutAction"/>
             </Menu>
         </MenuBar>
+
     </VBox>
 </ScrollPane>
