--- a/src/gui/DepartmentForm.fxml
+++ b/src/gui/DepartmentForm.fxml
@@ -3,28 +3,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="171.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12"
-            xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane layoutX="47.0" layoutY="33.0" prefHeight="115.0" prefWidth="419.0" AnchorPane.leftAnchor="20.0"
-              AnchorPane.topAnchor="20.0">
+<AnchorPane prefHeight="171.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormController">
+    <GridPane layoutX="47.0" layoutY="33.0" prefHeight="115.0" prefWidth="419.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="62.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="62.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <Label text="Id:"/>
-        <Label text="Name:" GridPane.rowIndex="1"/>
-        <TextField editable="false" GridPane.columnIndex="1"/>
-        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-        <Label textFill="#f51f1f" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+        <Label text="Id:" />
+        <Label text="Name:" GridPane.rowIndex="1" />
+        <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
+        <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label fx:id="labelErrorName" textFill="#f51f1f" GridPane.columnIndex="2" GridPane.rowIndex="1" />
         <HBox prefHeight="100.0" prefWidth="200.0" spacing="6.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-            <Button mnemonicParsing="false" text="Save"/>
-            <Button mnemonicParsing="false" text="Cancel"/>
+            <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
+            <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
         </HBox>
     </GridPane>
 </AnchorPane>
